--- a/src/gameinfo_gui.ui
+++ b/src/gameinfo_gui.ui
@@ -228,7 +228,7 @@
      <property name="frameShape">
       <enum>QFrame::NoFrame</enum>
      </property>
-     <layout class="QGridLayout" name="gridLayout">
+     <layout class="QGridLayout" name="gridLayout_1">
       <property name="leftMargin">
        <number>0</number>
       </property>
