--- a/src/preferences_gui.ui
+++ b/src/preferences_gui.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>681</width>
-    <height>787</height>
+    <height>823</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -2890,6 +2890,27 @@ New users: leave blank!</string>
           <property name="bottomMargin">
            <number>6</number>
           </property>
+          <item row="1" column="1">
+           <widget class="QLineEdit" name="LineEdit_exclude">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="toolTip">
+             <string>players to be colored green</string>
+            </property>
+            <property name="whatsThis">
+             <string>add players you want to
+
+- see green coloured and
+- exclude from shouting.
+
+Use semicolon &quot;;&quot; as delimiter (no spaces)</string>
+            </property>
+           </widget>
+          </item>
           <item row="0" column="0">
            <widget class="QLabel" name="TextLabel_watch">
             <property name="text">
@@ -2934,27 +2955,6 @@ Use semicolon &quot;;&quot; as delimiter (no spaces)</string>
             </property>
             <property name="buddy">
              <cstring>LineEdit_exclude</cstring>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="1">
-           <widget class="QLineEdit" name="LineEdit_exclude">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="toolTip">
-             <string>players to be colored green</string>
-            </property>
-            <property name="whatsThis">
-             <string>add players you want to
-
-- see green coloured and
-- exclude from shouting.
-
-Use semicolon &quot;;&quot; as delimiter (no spaces)</string>
             </property>
            </widget>
           </item>
@@ -4372,24 +4372,9 @@ Select one of the predefined hosts -- xxx -- and add a title to use it.</string>
          <property name="title">
           <string>Autosave</string>
          </property>
-         <layout class="QHBoxLayout">
-          <property name="spacing">
-           <number>6</number>
-          </property>
-          <property name="leftMargin">
-           <number>6</number>
-          </property>
-          <property name="topMargin">
-           <number>6</number>
-          </property>
-          <property name="rightMargin">
-           <number>6</number>
-          </property>
-          <property name="bottomMargin">
-           <number>6</number>
-          </property>
-          <item>
-           <widget class="QCheckBox" name="CheckBox_autoSave">
+         <layout class="QFormLayout" name="formLayout_5">
+          <item row="0" column="0">
+           <widget class="QCheckBox" name="autosaveCheckBox">
             <property name="focusPolicy">
              <enum>Qt::NoFocus</enum>
             </property>
@@ -4406,8 +4391,8 @@ If checked then when an observed game completes, it is automatically saved in th
             </property>
            </widget>
           </item>
-          <item>
-           <widget class="QCheckBox" name="CheckBox_autoSave_Played">
+          <item row="0" column="1">
+           <widget class="QCheckBox" name="autosavePlayedCheckBox">
             <property name="focusPolicy">
              <enum>Qt::NoFocus</enum>
             </property>
@@ -4424,21 +4409,44 @@ If checked then when a game you played completes, it is automatically saved in t
             </property>
            </widget>
           </item>
-          <item>
-           <spacer name="spacer12">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
+          <item row="1" column="0">
+           <widget class="QCheckBox" name="autosavePathCheckBox">
+            <property name="text">
+             <string>Save to fixed path:</string>
             </property>
-            <property name="sizeType">
-             <enum>QSizePolicy::Expanding</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>0</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
+           </widget>
+          </item>
+          <item row="1" column="1">
+           <widget class="QWidget" name="autosavePathWidget" native="true">
+            <layout class="QHBoxLayout" name="horizontalLayout_3">
+             <property name="leftMargin">
+              <number>0</number>
+             </property>
+             <property name="topMargin">
+              <number>0</number>
+             </property>
+             <property name="rightMargin">
+              <number>0</number>
+             </property>
+             <property name="bottomMargin">
+              <number>0</number>
+             </property>
+             <item>
+              <widget class="QLineEdit" name="autosavePathEdit"/>
+             </item>
+             <item>
+              <widget class="QPushButton" name="autosavePathButton">
+               <property name="text">
+                <string/>
+               </property>
+               <property name="icon">
+                <iconset resource="q4go.qrc">
+                 <normaloff>:/ClientWindowGui/images/clientwindow/fileopen.png</normaloff>:/ClientWindowGui/images/clientwindow/fileopen.png</iconset>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </widget>
           </item>
          </layout>
         </widget>
