--- a/src/clientwindow_gui.ui
+++ b/src/clientwindow_gui.ui
@@ -570,6 +570,9 @@
 		      <property name="insertPolicy">
 			<enum>QComboBox::InsertAtTop</enum>
 		      </property>
+		      <property name="duplicatesEnabled">
+			<bool>true</bool>
+		      </property>
 		    </widget>
 		  </item>
 		</layout>
